# lazybios

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCS.md  Doxyfile  ISSUES.md  LICENSE  README.md  USE.md  cmake_uninstall.cmake.in  lazybios.c  lazybios.h  lazybios.pc.in  mainpage.md  setup.sh  test.c
cmake-files/: cmake_uninstall.cmake.in  lazybios.pc.in  lazybiosConfig.cmake.in
doc/: api_groups.dox  building.dox  core_concepts.dox  data_sources.dox  getting_started.dox  limitations.dox  type0.dox  type1.dox  type10.dox  type11.dox  type12.dox  type13.dox  type14.dox  type15.dox  type16.dox  type17.dox  type18.dox  type19.dox  type2.dox  type20.dox  type21.dox  type22.dox  type23.dox  type24.dox  type25.dox  type26.dox  type27.dox  type28.dox  type29.dox  type3.dox  type30.dox  type31.dox  type32.dox  type33.dox  type34.dox  type35.dox  type36.dox  type37.dox  type38.dox  type39.dox  (+15 more)
doc/examples/: quick_start.c
include/: lazybios.h
include/lazybios/: type0.h  type1.h  type10.h  type11.h  type12.h  type13.h  type14.h  type15.h  type16.h  type17.h  type18.h  type19.h  type2.h  type20.h  type21.h  type22.h  type23.h  type24.h  type25.h  type26.h  type27.h  type28.h  type29.h  type3.h  type30.h  type31.h  type32.h  type33.h  type34.h  type35.h  type36.h  type37.h  type38.h  type39.h  type4.h  type40.h  type41.h  type42.h  type43.h  type44.h  (+7 more)
src/: bios.c  decoders.c  lazybios.c  memory.c  ports.c  processor.c  sysinfo.c  system.c
src/internal/: lazybios_internal.h
src/structures/: type0.c  type1.c  type10.c  type11.c  type12.c  type13.c  type14.c  type15.c  type16.c  type17.c  type18.c  type19.c  type2.c  type20.c  type21.c  type22.c  type23.c  type24.c  type25.c  type26.c  type27.c  type28.c  type29.c  type3.c  type30.c  type31.c  type32.c  type33.c  type34.c  type35.c  type36.c  type37.c  type38.c  type39.c  type4.c  type40.c  type41.c  type42.c  type43.c  type44.c  (+7 more)
test/: test.c
test-dumps/2/: smbios_entry_point
test-dumps/2Github125memdevices/: DMI
test-dumps/4Error/: DMI
test-dumps/manus/: DMI  smbios_entry_point
test-dumps/test-92/: smbios_entry_point
test-dumps/test-93/: DMI  smbios_entry_point
test-dumps/test-94/: DMI  smbios_entry_point
